--- a/server/src/main/resources/password/pwm/i18n/Display_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fi.properties
@@ -100,6 +100,7 @@ Display_ShowPasswordGuide=Salasana ohjeet
 Display_StrengthMeter=Salasanan vahvuus
 Display_UpdateProfile=P\u00e4ivit\u00e4 seuraavia tietoja:
 Display_UserEventHistory=T\u00e4ll\u00e4 sivulla n\u00e4et salasanaasi liittyv\u00e4t tapahtumat, jotka on tehty t\u00e4m\u00e4n liittym\u00e4n kautta. Kaikki ajat ovat %1% aikavy\u00f6hykkeen aikoja.
+Display_LogoutPublic=Istuntosi on vanhentunut toimettomuuden vuoksi.
 Field_Code=Koodi
 Field_Confirm_Prefix=Vahvista
 Field_ConfirmPassword=Vahvista uusi salasana
@@ -126,6 +127,8 @@ Long_Title_Shortcuts=Personoidut pikalinkit.
 Long_Title_UpdateProfile=P\u00e4ivit\u00e4 k\u00e4ytt\u00e4j\u00e4profiilia.
 Long_Title_UserEventHistory=Salasana tapahtumien historia tietoja, josta voit katsoa koska olet vaihtanut salasanasi.
 Long_Title_UserInformation=Tietoja salasanasta ja salasanapolitiikasta.
+Title_Application=Salasanan resetointi itsepalvelu
+Title_LogoutPublic=Ei Aktiivinen Aikakatkaisu
 Title_ActivateUser=Aktivoi k\u00e4ytt\u00e4j\u00e4
 Title_Admin=Admin
 Title_Captcha=Vahvistus
