--- a/server/src/main/resources/password/pwm/i18n/Error_no.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_no.properties
@@ -25,107 +25,148 @@ Password_DoesNotMatch=Passordene samsvarer ikke
 Password_Missing=Passord mangler
 Password_PreviouslyUsed=Nytt passord har blitt brukt tidligere
 Password_BadPassword=Nytt passord oppfyller ikke kravene
-# Password_BadOldPassword=
 Password_TooLong=Nytt passord er for langt
 Password_TooShort=Nytt passord er for kort
 Password_NotEnoughNum=Nytt passord har ikke nok siffer
 Password_NotEnoughAlpha=Nytt passord har ikke nok bokstaver
 Password_NotEnoughUpper=Nytt passord har ikke nok store bokstaver
-Password_NotEnoughLower=Nytt passord har ikke nok sm? bokstaver
+Password_NotEnoughLower=Nytt passord har ikke nok sm\u00e5 bokstaver
 Password_NotEnoughSpecial=Nytt passord har ikke nok spesialtegn (som ikke er bokstaver eller tall)
-Password_NotEnoughUnique= Nytt passord har ikke nok unike karakterer
+Password_NotEnoughUnique=Nytt passord har ikke nok unike karakterer
 Password_TooManyRepeat=Nytt passord har for mange gjentatte tegn
 Password_TooManySpecial=Nytt passord har for mange spesialtegn (som ikke er bokstaver eller tall)
 Password_TooManyAlpha=Nytt passord har for mange bokstaver
 Password_TooManyNumeric=Nytt passord har for mange siffer
-Password_TooManyLower=Nytt passord har for mange sm? bokstaver
+Password_TooManyLower=Nytt passord har for mange sm\u00e5 bokstaver
 Password_TooManyUpper=Nytt passord har for mange store bokstaver
 Password_TooManyOldChars=Nytt passord inneholder for mange tegn fra det gamle passordet
 Password_TooManyNonAlphaSpecial=Nytt passord har for mange spesialtegn (som ikke er bokstaver eller tall)
 Password_InvalidChar=Nytt passord har et ugyldig tegn
-Password_RequiredMissing=Nytt passord mangler et n?dvendig tegn
+Password_RequiredMissing=Nytt passord mangler et n\u00f8dvendig tegn
 Password_InWordlist=Nytt passord er altfor vanlig
 Password_SameAsOld=Nytt passord er det samme som gjeldende passord
 Password_SameAsAttr=Nytt passord er for opplagt
-Password_FirstIsNumeric=Det f?rste tegnet m? v?re numerisk
-Password_LastIsNumeric=Den siste tegnet kan ikke v?re numerisk
-Password_FirstIsSpecial=Det f?rste tegnet m? v?re et spesialtegn (som ikke er bokstaver eller tall)
-Password_LastIsSpecial=Den siste tegnet kan ikke v?re et spesialtegn (som ikke er bokstaver eller tall)
+Password_FirstIsNumeric=Det f\u00f8rste tegnet m\u00e5 v\u00e6re numerisk
+Password_LastIsNumeric=Den siste tegnet kan ikke v\u00e6re numerisk
+Password_FirstIsSpecial=Det f\u00f8rste tegnet m\u00e5 v\u00e6re et spesialtegn (som ikke er bokstaver eller tall)
+Password_LastIsSpecial=Den siste tegnet kan ikke v\u00e6re et spesialtegn (som ikke er bokstaver eller tall)
 Password_HistoryFull=Passordhistorikken er full
-Password_MeetsRules=Nytt passord godtatt, vennligst klikk Endre Passord
-Password_TooSoon=Det har ikke g?tt nok tid siden forrige endring av passord
+Password_MeetsRules=Nytt passord godtatt, vennligst klikk endre passord
+Password_TooSoon=Det har ikke g\u00e5tt nok tid siden forrige endring av passord
 Password_UsingDisallowedValue=Nytt passord bruker en verdi som ikke er tillatt
-Password_TooWeak=Passordet er for svakt. Pr?v ? legge til flere tall, spesialtegn eller blandede bokstaver.
+Password_TooWeak=Passordet er for svakt. Pr\u00f8v \u00e5 legge til flere tall, spesialtegn eller blandede bokstaver.
 Password_TooManyNonAlpha=Nytt passord har for mange tegn som ikke er bokstaver
 Password_NotEnoughNonAlpha=Nytt passord har ikke nok tegn som ikke er bokstaver
-Password_UnknownValidation=Nytt passord oppfyller ikke kravene. Pr?v ? bruke et annet passord.
+Password_UnknownValidation=Nytt passord oppfyller ikke kravene. Pr\u00f8v \u00e5 bruke et annet passord.
+Password_NewPasswordRequired=Nytt passord er p\u00e5krevet f\u00f8r du kan fortsette.
+Password_Expired=Passordet har utl\u00f8pt.
+Password_CustomError=Nytt passord oppfyller ikke kravene
+Password_BadOldPassword=Det gamle passordet er feil
+Password_NotEnoughGroups=Nytt passord inneholder ikke nok forskjellige typer tegn
+Password_TooManyConsecutive=Nytt passord har for mange p\u00e5f\u00f8lgende tegn (for eksempel 123456... eller abcdef...)
 
-Error_WrongResponse=En eller flere svar er feil. Vennligst pr?v igjen.
-Error_WrongPassword=Brukernavnet eller passord er ikke gyldig. Vennligst pr?v igjen.
-Error_Response_NoResponse=Brukernavnet er enten ikke gyldig eller det har ikke et konfigurert svar
-Error_Response_TooShort=Svaret p? sp?rsm?let "%1%" er for kort
-Error_Response_Wordlist=Svaret p? sp?rsm?let "%1%" er for vanlig
-Error_Response_TooLong=Svaret p? sp?rsm?let "%1%" er for lang
-Error_Response_Duplicate=Svaret p? sp?rsm?let "%1%" kan ikke v?re det samme som et annet svar
-Error_Challenge_Duplicate=Hvert sp?rsm?l m? v?re unikt.
-Error_Missing_Challenge_Text=Det mangler tekst til sp?rsm?let fra brukeren. 
+Error_WrongResponse=En eller flere svar er feil. Vennligst pr\u00f8v igjen.
+Error_WrongPassword=Brukernavnet eller passord er ikke gyldig. Vennligst pr\u00f8v igjen.
+Error_Response_NoResponse=Brukernavnet er enten ikke gyldig eller kan ikke benytte denne funksjonen
+Error_Response_TooShort=Svaret p\u00e5 sp\u00f8rsm\u00e5let "%1%" er for kort
+Error_Response_Wordlist=Svaret p\u00e5 sp\u00f8rsm\u00e5let "%1%" er benyttet for ofte
+Error_Response_TooLong=Svaret p\u00e5 sp\u00f8rsm\u00e5let "%1%" er for langt
+Error_Response_Duplicate=Svaret p\u00e5 sp\u00f8rsm\u00e5let "%1%" kan ikke v\u00e6re det samme som et annet svar
+Error_Challenge_Duplicate=Hvert sp\u00f8rsm\u00e5l m\u00e5 v\u00e6re unikt.
+Error_Missing_Challenge_Text=Det mangler tekst til sp\u00f8rsm\u00e5let fra brukeren.
 Error_UserAuthenticated=Du er allerede godkjent.
-Error_MissingParameter=En p?krevd parameter mangler.
-Error_DirectoryUnavailable=Katalogen er utilgjengelig. Hvis denne feilen oppst?r gjentatte ganger kan du kontakte brukerst?tte.
-Error_Unknown=Ukjent feil. Hvis denne feilen oppst?r gjentatte ganger kan du kontakte brukerst?tte.
+Error_MissingParameter=En p\u00e5krevd parameter mangler.
+Error_DirectoryUnavailable=Katalogen er utilgjengelig. Hvis denne feilen oppst\u00e5r gjentatte ganger kan du kontakte brukerst\u00f8tte.
+Error_Unknown=Ukjent feil. Hvis denne feilen oppst\u00e5r gjentatte ganger kan du kontakte brukerst\u00f8tte.
 Error_ActivationValidationFailed=En eller flere verdier er ikke korrekte.
-Error_CantMatchUser=Kan ikke finne brukernavnet. Vennligst pr?v igjen.
+Error_CantMatchUser=Kan ikke finne brukernavnet. Vennligst pr\u00f8v igjen.
 Error_ServiceNotAvailable=Tjenesten er ikke aktivert.
-Error_UserMisMatch=Autentisering feilet, m? du lukke nettleseren.
+Error_UserMisMatch=Autentisering feilet, lukk nettleseren.
 Error_ActivateUserNoQueryMatch=Din brukerkonto er ikke kvalifisert for aktivering.
-Error_AuthenticationRequired= Autentisering n?dvendig.
-Error_NoChallenges=Ingen sp?rsm?l har blitt konfigurert.
-Error_UserIntruder=Maks p?loggingsfors?k for bruker-IDen din er overskredet. Pr?v igjen senere.
-Error_AddressIntruder=Maks p?loggingsfors?k for din IP-adresse har blitt overskredet. Pr?v igjen senere.
-Error_SessionIntruder=Maks p?loggingsfors?k for denne ?kten er overskredet.
-Error_BadSessionPassword= Kan ikke opprette sesjons-passord.
-Error_Unauthorized=Du har ikke tillatelse til ? utf?re den valgte handlingen.
-Error_BadSession=Kan ikke opprette en ?kt med nettleseren din. Vennligst lukke nettleseren og pr?v igjen.
-Error_MissingRequiredResponse=Vennligst oppgi alle de n?dvendige svarene.
+Error_AuthenticationRequired=Autentisering n\u00f8dvendig.
+Error_NoChallenges=Ingen sp\u00f8rsm\u00e5l har blitt konfigurert.
+Error_UserIntruder=Maks p\u00e5loggingsfors\u00f8k for bruker-IDen din er overskredet. Pr\u00f8v igjen senere.
+Error_AddressIntruder=Maks p\u00e5loggingsfors\u00f8k har blitt overskredet. Pr\u00f8v igjen senere.
+Error_SessionIntruder=Maks p\u00e5loggingsfors\u00f8k for denne \u00f8kten er overskredet.
+Error_BadSessionPassword=Kan ikke opprette sesjons-passord.
+Error_Unauthorized=Du har ikke tillatelse til \u00e5 utf\u00f8re den valgte handlingen.
+Error_BadSession=Kan ikke opprette en \u00f8kt med nettleseren din. Vennligst lukke nettleseren og pr\u00f8v igjen.
+Error_MissingRequiredResponse=Vennligst oppgi alle de n\u00f8dvendige svarene.
 Error_MissingRandomResponse=Vennligst oppgi et ekstra tilfeldig svar.
-Error_BadCaptchaResponse=Feil bekreftelseskode, pr?v igjen.
-Error_CaptchaAPIError=En feil oppstod under validering av CAPTCHA svar. Vennligst lukk nettleser og pr?v igjen. Hvis denne feilen oppst?r gjentatte ganger s? ta kontakt med brukerst?tte.
-Error_InvalidConfig=Denen konfigurasjonen av portalprogrammet er ugyldig eller skadet. Vennligst korriger feilen, eller fjerne konfigurasjonsfilen.
-Error_InvalidFormID=Nettleserens sesjon er ugyldig eller har utl?pt. Vennligst lukk nettleseren og pr?v igjen.
+Error_BadCaptchaResponse=Feil bekreftelseskode, pr\u00f8v igjen.
+Error_CaptchaAPIError=En feil oppstod under validering av CAPTCHA svar. Vennligst lukk nettleser og pr\u00f8v igjen. Hvis denne feilen oppst\u00e5r gjentatte ganger s\u00e5 ta kontakt med brukerst\u00f8tte.\n
+Error_InvalidConfig=Denen konfigurasjonen av portalprogrammet er ugyldig eller skadet. Vennligst korriger feilen, eller fjerne konfigurasjonsfilen.\n
+Error_InvalidFormID=Nettlesersesjonen er ugyldig eller er utl\u00f8pt. Pr\u00f8v p\u00e5 nytt.
 Error_TokenMissingContact=Det er ingen kontaktinformasjon tilgjengelig for kontoen din. Vennligst kontakt din administrator.
-Error_TokenIncorrect=Feil kode, vennligst pr?v igjen.
-Error_BadCurrentPassword=N?v?rende passord er feil, vennligst pr?v igjen.
-Error_Closing=Operasjonen kan ikke fullf?re fordi portalen avsluttes.
+Error_TokenIncorrect=Feil kode, vennligst pr\u00f8v igjen.
+Error_BadCurrentPassword=N\u00e5v\u00e6rende passord er feil, vennligst pr\u00f8v igjen.
+Error_Closing=Operasjonen kan ikke fullf\u00f8re fordi portalen avsluttes.
 Error_Missing_GUID=Kan ikke finne en GUID for bruker. Vennligst kontakt din administrator.
-Error_TokenExpired=Koden du har tastet inn er utl?pt, og er ikke lenger gyldig. Vennligst pr?v igjen.
-Error_SecureRequestRequired=Usikrede (HTTP) tilkoblinger er ikke tillatt til dette systemet. Vennligst pr?v igjen ved hjelp av en sikker (HTTPS) tilkobling.
-Error_Writing_Responses=En feil oppstod under lagring av svaret p? ditt sp?rsm?l. Vennligst kontakt din administrator.
-Error_Unlock_Failure=En feil oppstod under oppl?sning av kontoen din. Vennligst kontakt din administrator.
+Error_TokenExpired=Koden du har tastet inn er utl\u00f8pt, og er ikke lenger gyldig. Vennligst pr\u00f8v igjen.
+Error_SecureRequestRequired=Usikrede (HTTP) tilkoblinger er ikke tillatt til dette systemet. Vennligst pr\u00f8v igjen ved hjelp av en sikker (HTTPS) tilkobling.
+Error_Writing_Responses=En feil oppstod under lagring av svaret p\u00e5 ditt sp\u00f8rsm\u00e5l. Vennligst kontakt din administrator.
+Error_Writing_Otp_Secret=Det oppsto en feil under lagringen av OTP-informasjonen. Ta kontakt med administratoren din.
+Error_Unlock_Failure=En feil oppstod under oppl\u00e5sning av kontoen din. Vennligst kontakt din administrator.
 Error_Update_Attrs_Failure=En feil oppstod under lagring av profilen din. Vennligst kontakt din administrator.
 Error_Activation_Failure=En feil oppstod under aktivering av kontoen. Vennligst kontakt din administrator.
 Error_NewUser_Failure=En feil oppsto mens du laget ny brukerkonto. Vennligst kontakt din administrator.
-Error_Activation=Kan ikke aktivere kontoen din med den informasjonen du har oppgitt. Vennligst pr?v igjen.
-Error_DB_Unavailable=Database utilgjengelig. Hvis denne feilen oppst?r gjentatte ganger kan du kontakte brukerst?tte.
-Error_LocalDB_Unavailable=Databasen til portalprogrammet er utilgjengelig. Hvis denne feilen oppst?r gjentatte ganger kan du kontakte brukerst?tte.
-Error_App_Unavailable=Portal-programmet er ikke tilgjengelig eller starter p? nytt. Hvis denne feilen oppst?r gjentatte ganger kan du kontakte brukerst?tte.
-Error_IncorrectRequestSequence=Bruk av tilbake-knappen eller flere webleser-sesjoner har blitt oppdaget. Vennligst lukk alle nettlesere og pr?v igjen.
-Error_UnreachableCloudService=Portalprogrammets skytjeneste var uoppn?elig.
-Error_InvalidSecurityKey=Portalprogrammets sikkerhetsn?kkel mangler eller er ugyldig.
-Error_Clearing_Responses=En feil oppstod under godkjenning av responsen p? sp?rsm?lene. Vennligst kontakt din administrator.
-
-Error_FieldRequired=%1% p?krevet
-Error_FieldNotANumber=%1% m? v?re tall
+Error_Activation=Kan ikke aktivere kontoen din med den informasjonen du har oppgitt. Vennligst pr\u00f8v igjen.
+Error_DB_Unavailable=Database utilgjengelig. Hvis denne feilen oppst\u00e5r gjentatte ganger kan du kontakte brukerst\u00f8tte.
+Error_LocalDB_Unavailable=Databasen til portalprogrammet er utilgjengelig. Hvis denne feilen oppst\u00e5r gjentatte ganger kan du kontakte brukerst\u00f8tte.
+Error_App_Unavailable=Portal-programmet er ikke tilgjengelig eller starter p\u00e5 nytt. Hvis denne feilen oppst\u00e5r gjentatte ganger kan du kontakte brukerst\u00f8tte.
+Error_IncorrectRequestSequence=Bruk av tilbake-knappen eller flere webleser-sesjoner har blitt oppdaget. Vennligst lukk alle nettlesere og pr\u00f8v igjen.
+Error_UnreachableCloudService=En ekstern tjeneste var utilgjengelig.
+Error_InvalidSecurityKey=Portalprogrammets sikkerhetsn\u00f8kkel mangler eller er ugyldig.
+Error_Clearing_Responses=En feil oppstod under godkjenning av responsen p\u00e5 sp\u00f8rsm\u00e5lene. Vennligst kontakt din administrator.
+Error_ServiceUnreachable=A required service is unavailable.  Please try again later.
+Error_ChallengeInResponse=Svaret p\u00e5 "%1%" kan ikke inneholde deler av sp\u00f8rsm\u00e5let.
+Error_Multi_Username=Flere brukere samsvarer med det oppgitte brukernavnet "%1%". Vennligst avgrens s\u00f8ket ditt.
+Error_CertificateError=En sertifikatefeil oppstod: %1%.
+Error_SyslogWriteError=A problem writing to the syslog server has been encountered, error: %1%
+Error_TooManyThreads=Maximum thread count limit exceeded, please try again later
+Error_SecurityViolation=A security violation has occurred.  Please try again later.
+Error_NoOtpConfiguration=Ingen engangspassord er konfigurert.
+Error_TrialViolation=Trial limits have been exceeded.
+Error_AccountDisabled=Konto er deaktiver
+Error_AccountExpired=Konto har utl\u00f8pt.
+Error_WrongOtpToken=Feil engangspassord.
+Error_AttrIntruder=Maksimale s\u00f8kefors\u00f8k er overskredet. Pr\u00f8v igjen senere.
+Error_AuditWrite=Klarte ikke \u00e5 skrive audit loggen.
+Error_LdapIntruder=Maks p\u00e5loggingsfors\u00f8k for bruker-IDen din er overskredet. Pr\u00f8v igjen senere.
+Error_NoLdapConnection=A connection to the required directory is not available.
+Error_OAuthError=En feil ved bruk av OAuth-autentiseringsprotokollen har oppst\u00e5tt. Pr\u00f8v igjen senere.
+Error_FieldRequired=%1% p\u00e5krevet
+Error_FieldNotANumber=%1% m\u00e5 v\u00e6re tall
 Error_FieldInvalidEmail=%1% er ikke en gyldig e-postadresse
 Error_FieldTooShort=%1% er for kort
 Error_FieldTooLong=%1% er for langt
 Error_FieldDuplicate=%1% er allerede brukt, vennligst bruk en annen verdi
 Error_FieldBadConfirm=%1% felt samsvarer ikke
+Error_FieldRegexNoMatch=%1% er ikke korrekt format
+Error_Orig_Admin_Only=Bare den opprinnelige administratoren kan utf\u00f8re denne egenskapen
+Error_PasswordRequired=Det kreves et passord for \u00e5 utf\u00f8re denne operasjonen
+Error_ReportingError=An error during report generation occurred
+Error_TokenDestIntruder=Maksimale fors\u00f8k er overskredet. Pr\u00f8v igjen senere.
+Error_OtpRecoveryUsed=Gjenopprettingen kunne v\u00e6rt tidligere brukt og kan ikke brukes igjen.
+Error_RedirectIllegal=The requested redirect url is not permitted.
+Error_CryptError=An unexpected cryptography error has occurred.
+Error_SmsSendError=Kan ikke sende sms-melding: %1%
+Error_LdapDataError=An LDAP data error has occurred.
+Error_MacroParseError=Macro parse error: %1%
+Error_NoProfileAssigned=Ingen profil er tildelt for denne operasjonen.
+Error_StartupError=An error occurred while starting the application.  Check the log files for information.
+Error_EnvironmentError=An error with the application environment has prevented the application from starting.
+Error_ApplicationNotRunning=Denne funksjonaliteten er ikke tilgjengelig f\u00f8r programkonfigurasjonen er beskyttet.
+Error_EmailSendFailure=Kunne ikke sende eposten %1%, feil: %2%
+Error_PasswordOnlyBad=Passord er feil. Pr\u00f8v p\u00e5 nytt.
+
+Error_RemoteErrorValue=Remote Error: %1%
 
 Error_ConfigUploadSuccess=Fil er lastet opp
-Error_ConfigUploadFailure=Fil er ikke lastet opp: %1%
-Error_ConfigSaveSuccess=Konfigurasjon lagret. Omstart av portalprogrammet har blitt forespurt. Portalprogrammet kan v?re utilgjengelig mens maskinen starter. Hvis omstart ikke kreves kan det hende du m? starte portalprogrammet manuelt.
+Error_ConfigUploadFailure=Fil kunne ikke lastes opp.
+Error_ConfigSaveSuccess=Konfigurasjon lagret. Omstart av portalprogrammet har blitt forespurt. Portalprogrammet kan v\u00e6re utilgjengelig mens maskinen starter. Hvis omstart ikke kreves kan det hende du m\u00e5 starte portalprogrammet manuelt.\n
 Error_ConfigFormatError=Konfigurasjon formatfeil: %1%
-Error_ConfigLdapFailure=Kunne ikke koble til LDAP katalogtjener: %1%
-Error_ConfigLdapSuccess=Vellykket tilkoblet LDAP katalogtjener
+Error_ConfigLdapFailure=Kunne ikke koble til LDAP katalogtjener.
+Error_ConfigLdapSuccess=Tilkoblet til LDAP katalogtjener var vellykket
 
 Error_HTTP_404=Siden du forespurte ble ikke funnet.
