--- a/server/src/main/resources/password/pwm/i18n/Display_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fi.properties
@@ -79,6 +79,7 @@ Display_PasswordPrompt=Sy\u00f6t\u00e4 uusi salasana
 Display_PasswordStrengthHigh=Vahvuus: <b>Vahva</b>
 Display_PasswordStrengthLow=Vahvuus: <b>Heikko</b>
 Display_PasswordStrengthMedium=Vahvuus: <b>Riitt\u00e4v\u00e4</b>
+Display_TypingWait=Odotetaan kirjoittamisen valmistumista....
 Display_PasswordWarn=Salasanasi on vanhentumassa. Vaihda salasanasi pian v\u00e4ltt\u00e4\u00e4ksesi kirjautumisongelmia. Salasana vanhenee %1%.
 Display_PeopleSearch=Sy\u00f6t\u00e4 haku ehtosi alle. Voit hakea nimen, s\u00e4hk\u00f6postiosoitteen tai puhelinnumeron perusteella.
 Display_PleaseWait=Odota hetki...
