--- a/server/src/main/resources/password/pwm/i18n/Display_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fi.properties
@@ -146,6 +146,7 @@ Title_Logout=Kirjaudu ulos
 Title_MainPage=P\u00e4\u00e4valikko
 Title_NewUser=Uuden k\u00e4ytt\u00e4j\u00e4n rekister\u00f6inti
 Title_PasswordGuide=Salasana ohjeet
+Title_PasswordPolicy=Salasanapolitiikka
 Title_PasswordStrength=Salasanan vahvuus
 Title_PasswordWarning=Salasana varoitus
 Title_PeopleSearch=Henkil\u00f6haku
