--- a/server/src/main/resources/password/pwm/i18n/Message_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_fi.properties
@@ -84,3 +84,4 @@ Success_Unknown=Operaatio on onnistunut.
 Success_UnlockAccount=Tunnuksesi on avattu.
 Success_UpdateGuest=Vieras k\u00e4ytt\u00e4j\u00e4tunnus on p\u00e4ivitetty onnistuneesti. K\u00e4ytt\u00e4j\u00e4\u00e4 tiedotetaan mik\u00e4li s\u00e4hk\u00f6postiosoite on sy\u00f6tetty.
 Success_UpdateProfile=Tiedot on tallennettu.
+Success_TokenResend=Uusi turvakoodi on l\u00e4hetetty teille.
