--- a/server/src/main/resources/password/pwm/i18n/Display_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fi.properties
@@ -129,7 +129,7 @@ Long_Title_Shortcuts=Personoidut pikalinkit.
 Long_Title_UpdateProfile=P\u00e4ivit\u00e4 k\u00e4ytt\u00e4j\u00e4profiilia.
 Long_Title_UserEventHistory=Salasana tapahtumien historia tietoja, josta voit katsoa koska olet vaihtanut salasanasi.
 Long_Title_UserInformation=Tietoja salasanasta ja salasanapolitiikasta.
-Title_LogoutPublic=Ei Aktiivinen Aikakatkaisu
+Title_LogoutPublic=Aikakatkaisu
 Title_ActivateUser=Aktivoi k\u00e4ytt\u00e4j\u00e4
 Title_Admin=Admin
 Title_Captcha=Vahvistus
