changepassword, helpdesk UI web service refactoring.

--- a/server/src/main/resources/password/pwm/i18n/Message.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=The new guest account has been successfully created.  The gu
 Success_CreateUser=Your new user account has been successfully created.
 Success_NewUserForm=Your account is ready to be created.  Continue when ready.
 Success_PasswordChange=The password has been changed successfully.
-Success_ChangedHelpdeskPassword=The password has been changed successfully for user 
+Success_ChangedHelpdeskPassword=The password has been changed successfully for user %1%. 
 Success_PasswordReset=Password for %1% has been set successfully.
 Success_PasswordSend=Your new password has been sent to %1%.  Please close this window and then login using your new password.
 Success_ResponsesMeetRules=Your answers meet the requirements.  Click Save Answers when ready.
