No error message on browser tab 2 after timeout on browser tab 1
This addresses the following issue:

1. Login to SSPR, and stay at the main menu.  Idle timeout at the bottom of the page will show "about 4 minutes."

2. Open a second browser tab, go to SSPR, and open the help desk module.   Idle timeout at the bottom of this page will show "about 59 minutes."

3. Wait until the idle timeout is reached on the first tab (the main menu).

4. Attempt to search for something in the help desk module on the second tab.  A spinning wheel will be shown.

An error dialog now shows up, instructing the user to reload the page.

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -94,6 +94,7 @@ Display_GuestRegistration=To register a new guest account, please enter the foll
 Display_GuestUpdate=To update a guest account, please check and modify the following information.
 Display_Helpdesk=Please enter search data for the user.
 Display_HelpdeskOtpValidation=Instruct the user to load their mobile authentication app and share the current pass code.
+Display_HelpdeskNoData=The server did not respond with valid results.  This can often be caused from an expired session in another browser tab.  Reloading the page should allow you to log in and try again.
 Display_Hour=hour
 Display_Hours=hours
 Display_IdleTimeout=Idle Timeout\:
