--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -94,7 +94,7 @@ Display_GuestRegistration=To register a new guest account, please enter the foll
 Display_GuestUpdate=To update a guest account, please check and modify the following information.
 Display_Helpdesk=Please enter search data for the user.
 Display_HelpdeskOtpValidation=Instruct the user to load their mobile authentication app and share the current pass code.
-Display_HelpdeskNoData=The server did not respond with valid results.  This can often be caused from an expired session in another browser tab.  Reloading the page should allow you to log in and try again.
+Display_HelpdeskNoData=The server is not responding properly. A session in another browser window might have expired. Reload the page and log in again.
 Display_Hour=hour
 Display_Hours=hours
 Display_IdleTimeout=Idle Timeout\:
